public enum Category {


    action,
    adventure,
    animation,
    biography,
    comedy,
    crime,
    drama,
    documentary,
    family,
    fantasy,
    filmnoir,
    history,
    horror,
    music,
    musical,
    mystery,
    romance,
    scifi,
    sport,
    talkshow,
    thriller,
    war,
    western


}
