import util.FileIO;
import util.TextUI;

import java.util.ArrayList;

public class Service {

    private SearchEngine searchEngine;
    private User currentUser;
    private Menu menu;
    private ArrayList<User> users;
    TextUI ui = new TextUI();

    public Service() {
        this.menu = new Menu();
        this.searchEngine = new SearchEngine();
        users = new ArrayList<User>();
        createAllUsers();
    }


    public void startMenuLoop() {
        loginPrompt();
        mainMenuOptions();
    }

    public void loginPrompt() {

        switch (menu.printLoginPrompt()) {
            case "1":
                login();
                break;
            case "2":
                String username = ui.promptText("Enter username:");
                String password = ui.promptText("Enter password:");
                createNewUser(username, password);
                break;
            default:
                ui.displayMsg("Invalid option, please try again.");
                loginPrompt();
        }
    }

    // ---- LOGIN ----
    public void login() {
        String username = ui.promptText("Enter username:").trim();
        String password = ui.promptText("Enter password:").trim();

        //Get UPS, separate data, then compare to see if userlogin is correct.
        for (User u : users) {
            if (username.equalsIgnoreCase(u.getUsername()) && password.equals(u.getPassword())) {
                currentUser = u;
                menu.setCurrentUser(u);
                return;
            }
        }
        // UNSUCCESSFUL
        System.out.println("\nLogin failed, try again?");
        loginPrompt();
    }

    public void mainMenuOptions() {

        switch (menu.printMainMenu()) {
            case "1":
                searchMenuOptions();
                break;
            case "2":
                listMenuOptions();
                break;
            case "3":
                for (Media m : searchEngine.getMediaLibrary().getAllMovies()) {
                    ui.displayMsg(m.toString());
                    //vil gerne bruge ui.displaylist men har ikke en liste kun med titler? maaske ligemeget
                }
                break;
            case "4":
                for (Media s : searchEngine.getMediaLibrary().getAllSeries()) {
                    ui.displayMsg(s.toString());
                }
                break;
            case "5":
                quitMenuOptions();
                break;
            default:
                ui.displayMsg("choose an option 1, 2, 3, 4 or 5.");
                mainMenuOptions();
        }
    }

    public void searchMenuOptions() {
        switch (menu.printSearchMenu()) {
            case "1":
                String categorySelection = menu.selectFromList("Select a category:", Category.values());
                ArrayList<Media> filteredMediaByCategory = searchEngine.filterByCategory(categorySelection);
                int mediaChoice = Integer.parseInt(menu.selectFromList("Select a Media:", filteredMediaByCategory));
                currentUser.setCurrentMedia(filteredMediaByCategory.get(mediaChoice - 1));
                mediaMenuOptions();
                break;
            case "2":
                String titleSelection = ui.promptText("Enter title:");
                Media filteredMediaByTitle = searchEngine.filterByTitle(titleSelection);
                currentUser.setCurrentMedia(filteredMediaByTitle);
                ui.displayMsg("Found " + filteredMediaByTitle.title);
                mediaMenuOptions();
                break;
            case "3":
                mainMenuOptions();
                break;
            default:
                ui.displayMsg("Please pick a valid option (numbers 1-3)");
                searchMenuOptions();
                break;
        }
    }

    private void listMenuOptions() {
        switch (menu.printListMenu()) {
            case "1":
                int mediaChoiceCase1 = Integer.parseInt(menu.selectFromList("Select a Media:", currentUser.getWantToWatch()));
                currentUser.setCurrentMedia(currentUser.getWantToWatch().get(mediaChoiceCase1 - 1));
                mediaMenuOptions();
                break;
            case "2":
                int mediaChoiceCase2 = Integer.parseInt(menu.selectFromList("Select a Media:", currentUser.getWatched()));
                currentUser.setCurrentMedia(currentUser.getWatched().get(mediaChoiceCase2 - 1));
                mediaMenuOptions();
                break;
            case "3":
                mainMenuOptions();
                break;
            default:
                ui.displayMsg("Select an option: 1, 2, or 3.");
                listMenuOptions();
        }
    }

    public void mediaMenuOptions() {
        switch (menu.printMediaMenu()) {
            case "1":
                currentUser.addMediaToList(currentUser.getWatched());
                currentUser.getCurrentMedia().play();
                mediaMenuOptions();
                break;
            case "2":
                currentUser.addMediaToList(currentUser.getWantToWatch());
                mediaMenuOptions();
                break;
            case "3":
                currentUser.removeFromWantToWatch();
                mediaMenuOptions();
                break;
            case "4":
                mainMenuOptions();
                break;
            default:
                ui.displayMsg("Please pick a valid option (numbers 1-4)");
                mediaMenuOptions();
        }
    }

    public void quitMenuOptions() {
        switch (menu.printQuitMenu()) {
            case "1":
                FileIO.saveData(createUserDataString(), "data/userData.csv");
                break;
            case "2":
                mainMenuOptions();
                break;
        }
    }


    //


    //Called when a user doesn't login in, and instead creates an entirely new user.
    void createNewUser(String name, String password) {
        User u = new User(name, password);
        currentUser = u;
        menu.setCurrentUser(u);
        users.add(u);
    }

    void createAllUsers() {
        ArrayList<String> userData = FileIO.readData("data/userData.csv");

        for (String s : userData) {

            ArrayList<Media> wantToWatch = new ArrayList<>();
            ArrayList<Media> watched = new ArrayList<>();

            String[] line = s.split(";");

            String username = line[0].trim();
            String password = line[1].trim();


            String wtw = line[2].trim();
            String[] movies = wtw.split(",");
            //Use saved String ArrayList to create Media objects for the users wantToWatch list
            for (String movie : movies) {
                for (Media m : searchEngine.getMediaLibrary().getAllMedia())
                    if (movie.equalsIgnoreCase(m.title))
                        wantToWatch.add(m);
            }

            String w = line[3].trim();
            String[] series = w.split(",");
            for (String serie : series) {
                for (Media t : searchEngine.getMediaLibrary().getAllMedia())
                    if (serie.equalsIgnoreCase(t.title))
                        watched.add(t);
            }
            User u = new User(username, password, wantToWatch, watched);
            users.add(u);
        }
    }

    //gem alle linjer fra CSV
    //lav en lang String af et user-objekt
    //Stringjoiner?
    public ArrayList<String> createUserDataString(){
        ArrayList <String> allUsersData=new ArrayList<>();
        for(User u:users) {
            String userdata = u.getUsername() + ";" + u.getPassword() + ";";
            if (!u.getWantToWatch().isEmpty()) {
                for (Media m : u.getWantToWatch()) {
                    if (u.getWantToWatch().getLast().title.equals(m.title)) {
                        userdata += m.title;
                    } else userdata += m.title + ",";
                }
            }
            else {
                userdata += "NoMedia";
                }

            userdata += ";";
            if (!u.getWatched().isEmpty()) {
                for (Media s : u.getWatched()) {
                    if (u.getWatched().getLast().title.equals(s.title)) {
                        userdata += s.title;
                    } else userdata += s.title + ",";
                }
            }
            else {
                userdata += "NoMedia";
            }
            userdata += ";";
            allUsersData.add(userdata);

        } return allUsersData;
    }

    public ArrayList<User> getUsers() {
        return this.users;
    }
}



