@startuml
'https://plantuml.com/class-diagram

!pragma layout smetana

enum Category


class Service {
- User currentUser
- SearchEngine searchEngine
- Menu menu
- ArrayList<User> users
-TextUI ui
+startMenuLoop()
+loginPrompt()
+login()
+mainMenuOptions()
+searchMenuOptions()
+listMenuOptions()
+mediaMenuOptions()
+quitMenuOptions()
+createNewUser(String, String)
+createAllUsers()
+createUserDataString()
+getUsers()
}

class MediaLibrary{
- ArrayList<Media> allMedia
- ArrayList <Media> allSeries
- ArrayList <Media> allMovies
+createMedia()
+ ArrayList<Media> getAllMedia()
+ ArrayList<Media> getAllSeries()
+ ArrayList<Media> getAllMovies()

}
class Menu{
- TextUI ui
- User currentUser
+String printLoginPrompt()
+String printMainMenu()
+String printSearchMenu()
+String printListMenu()
+String printMediaMenu()
+String printQuitMenu()
+String selectFromList(String, ArrayList<Media>)
+String selectFromList(String, Category[])
+setCurrentUser(User)
}

class SearchEngine{
- MediaLibrary mediaLibrary
+Media filterByTitle(String)
+Media filterByCategory(String)
+MediaLibrary getMediaLibrary()


}

abstract class Media {
# String title
# ArrayList<Category> category
# double rating
+{abstract} play()
+{abstract} String toString()
}

class Movie extends Media{
- int releaseYear
+ play()
+ String toString()
}

class Series extends Media{
- String releasePeriod
- ArrayList<String> seasons
+ play()
+ String toString()
}


class User{
- String username
- String password
- ArrayList<String> wantToWatch
- ArrayList<String> watched
- Media currentMedia
+ User(String username, String password)
+ User(String username, String password, ArrayList<Media> wantToWatch, ArrayList<Media> watched)
+ addMediaToList(Media media, ArrayList<Media> list)
+ removeFromWantToWatch()
+String getUsername()
+String getPassword()
+ArrayList<Media> getWantToWatch()
+ArrayList<Media> getWatched()
}

package "util" {
class TextUI {
- Scanner scan
+ boolean promptBinary(String msg)
+ String promptText(String msg)
+ int promptNumeric(String msg)
+ ArrayList<String> promptChoice(ArrayList<String> options, int limit, String msg)
+ void displayMessage(String msg)
+ void displayList(ArrayList<String> list, String msg)
}

class FileIO{
+ saveData(ArrayList<String>, String path)
+ ArrayList<String> readData(String path)
}
}

Media *-- Category
SearchEngine *--MediaLibrary
MediaLibrary *-- Media
Service *-- SearchEngine
Service *-- User
Service *-- Menu
Service *-- TextUI
Menu *--- User
Menu *----- TextUI



@enduml